--- a/pocketbook/pubspec.yaml
+++ b/pocketbook/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   syncfusion_flutter_charts: ^21.1.37
   shared_preferences: ^2.1.0
   http: ^0.13.5
+  pie_chart: ^5.3.2
 
 dev_dependencies:
   flutter_test:
