--- a/pocketbook/pubspec.yaml
+++ b/pocketbook/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   shared_preferences: ^2.1.0
   http: ^0.13.5
   pie_chart: ^5.3.2
+  local_auth: ^2.1.6
 
 dev_dependencies:
   flutter_test:
