--- a/pocketbook/pubspec.yaml
+++ b/pocketbook/pubspec.yaml
@@ -41,6 +41,12 @@ dependencies:
   pie_chart: ^5.3.2
   local_auth: ^2.1.6
 
+  # isar dependencies
+  isar: ^3.0.0
+  isar_flutter_libs: 3.0.0
+  isar_generator: ^3.0.0
+  build_runner: ^2.3.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -51,6 +57,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
